{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 82,
  "lineage": "b1bc66fe-d7bb-e125-e2d1-9f65e496e0cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:655393657636:loadbalancer/galleries-autoscaling-group",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d",
              "us-east-1e",
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "galleries-autoscaling-group-1423197175.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "galleries-autoscaling-group",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "galleries-autoscaling-group",
            "security_groups": [
              "sg-0c0a06ffe9929ce47"
            ],
            "source_security_group": "655393657636/galleries-load-balancer-security-group",
            "source_security_group_id": "sg-0c0a06ffe9929ce47",
            "subnets": [
              "subnet-0445a762",
              "subnet-15d7701b",
              "subnet-befbca80",
              "subnet-de2bc3ff",
              "subnet-f0f917af",
              "subnet-f69825bb"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0915e09cc7ceee3ab",
            "arn": "arn:aws:ec2:us-east-1:655393657636:instance/i-029500cced8b55fbd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029500cced8b55fbd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab34a638e8ba03e4",
            "private_dns": "ip-172-31-83-147.ec2.internal",
            "private_ip": "172.31.83.147",
            "public_dns": "ec2-3-87-1-11.compute-1.amazonaws.com",
            "public_ip": "3.87.1.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ce00aa20693f0621",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mysql-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-de2bc3ff",
            "tags": {
              "Name": "mysql-ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0352cf19fbc30c410"
            ]
          },
          "dependencies": [
            "aws_security_group.mysql_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655393657636:security-group/sg-0c0a06ffe9929ce47",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0a06ffe9929ce47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "galleries-load-balancer-security-group",
            "name_prefix": null,
            "owner_id": "655393657636",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-59a59b23"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "galleries_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655393657636:security-group/sg-0e7312dbe5624b9af",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e7312dbe5624b9af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gallery-instances-security-group",
            "name_prefix": null,
            "owner_id": "655393657636",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-59a59b23"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655393657636:security-group/sg-0352cf19fbc30c410",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0352cf19fbc30c410",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysql-security-group",
            "name_prefix": null,
            "owner_id": "655393657636",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-59a59b23"
          }
        }
      ]
    }
  ]
}